[package]
name = "blockchain_tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2.36"
hex = "0.4.3"
primitive-types = "0.11.1"
sled = "0.34.7"
serde = { version = "1.0.136", features = ["derive"] }
bincode = "1.3.3"
clap = "3.1.6"
